Fixing modal and drawer visible issue on multiple click

--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -147,3 +147,13 @@
 .drawerOverlayOut {
 	composes: drawerOverlayAnimOut;
 }
+
+.drawerBlockClick{
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	top: 0;
+	right:0;
+	bottom: 0;
+	left: 0;
+}
