--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -1,11 +1,11 @@
 .modal{
 	max-width: 600px;
-  margin: 1.75rem auto;
+	margin: 1.75rem auto;
 	background: #fff;
 	z-index: 999999;
 	position: fixed;
-  left: 0;
-  right: 0;
+  left: 7px;
+  right: 7px;
   top: 50px;
 	border-radius: 2px;
 	transition: opacity 0.3s;
@@ -85,4 +85,16 @@
 
 .hideModal{
 	composes: modalAnimationOut;
+}
+
+
+.modalBlockClick{
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	top: 0;
+	right:0;
+	bottom: 0;
+	left: 0;
+	background: transparent;
 }
